2023 Day 8 - java 21 upgrade